tests/snapshots/cli_help__cli_help_tasks.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Tasks in a list

Usage: ms-todo tasks [OPTIONS] <COMMAND>

Commands:
  list          Every task in a list, completed ones included; or with a filter and no --list, the tasks in every list that match it
  show          One task, every field
  add           Add a task, read from text the way you'd say it
  parse         Show how `tasks add` would read the text, without adding anything
  suggest-list  Suggest a list for a task with this title, without adding anything
  complete      Mark tasks completed. A recurring task moves on to its next due date
  reopen        Mark completed tasks as not started again
  edit          Change a task's title, dates, importance, reminder, notes, recurrence, categories, assignee, defer date, Someday or nag; or all but the title and notes of several at once
  move          Move tasks to another list, keeping everything they hold: steps, link, attachments and ms-todo's own fields. Each is copied, the copy checked, and only then the original deleted; `undo` moves it back. Name them, or pick the open ones --overdue or --due-before finds
  nag           Nag me about tasks: once a task's reminder is due, this machine notifies me every so often until it's completed
  relate        Link two tasks to each other, both ways. Microsoft To Do has no such link, so only ms-todo shows it (`tasks show`, the TUI's detail pane); it syncs with the tasks. `undo` takes it away
  unrelate      Take away the link between two tasks, both ways
  delete        Delete tasks. Asks first in a terminal; anywhere else it needs --yes
  links         A task's links: its linked resources' web addresses, then the URLs in its notes, each once
  open          Open a task's link in the browser or mail app (http, https and mailto only). With several, --index picks one; without it they're listed and it exits 2
  help          Print this message or the help of the given subcommand(s)

Options:
      --format <FORMAT>      Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --instance <NAME>      Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                Print nothing on stderr but errors: no notes and no progress
      --no-color             No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>  Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                 Print help
  -V, --version              Print version
