tests/snapshots/cli_help__cli_help_tasks_add.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Add a task, read from text the way you'd say it

`Pay rent every 1st #Finances p1 9am` is "Pay rent" in Finances, importance high, every month on the 1st, due the next 1st with a reminder at 09:00. --no-parse takes the text as the title, exactly as given; flags always win over what the text says. `tasks parse` shows the reading without adding anything

Usage: ms-todo tasks add [OPTIONS] <TEXT>

Arguments:
  <TEXT>
          The task, as you'd say it. Read out of it: #List or #"Two words" (its name or a prefix only it has), @category, p1–p4, every … (a recurrence), !time-or-date (a reminder), ^date (hidden until then), +someday, +myday, start <date>, and a date and time (the due date; a time also sets a reminder then). "Quoted text" and \# \@ \! \^ stay as typed. What's left is the title

Options:
      --format <FORMAT>
          Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped]

          [possible values: table, json, jsonl, ids, csv]

      --no-parse
          Take the text as the title, exactly as given: for text you didn't type yourself, such as an agent's, with flags for the fields

      --create-categories
          Create an @category that isn't one of your Outlook categories yet. Without it the task still gets the name, which Outlook shows without a colour

      --instance <NAME>
          Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy

      --fresh
          Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)

      --list <NAME|ID>
          The list's exact name or its ID, over any #List in the text [default: the "Tasks" list]

      --due <WHEN>
          Due date, over any in the text: 2026-10-02, today, tomorrow, fri, next mon, in 3 days, +2w, 12 oct, 12/10 (day first), end of month. Due dates have no time; put a time in --reminder

      --quiet
          Print nothing on stderr but errors: no notes and no progress

      --no-color
          No colour or bold in tables (also NO_COLOR)

      --reminder <WHEN>
          Remind me at this local time, over any in the text: 17:30 (the next one), tomorrow 9am, fri 5:30pm, 2026-10-02 09:30. A day alone, such as tomorrow or in 2 days, is 09:00 on it

      --importance <LEVEL>
          How important it is, over any p1–p4 in the text: 1 or p1 (high), 2, 3, p2 or p3 (normal), 4 or p4 (low), or high, normal or low

      --body <TEXT>
          Notes, as plain text

      --body-file <FILE>
          Notes from a file, as plain text; `-` reads stdin

      --start <WHEN>
          Start date, over any `start <date>` in the text, in the forms --due takes. With no due date, Microsoft To Do makes it the due date too

      --category <NAME>
          A category (an Outlook category's name); several give several. Over any @category in the text

      --recur <EVERY>
          Repeat it, over any `every …` in the text: every mon, every 2 weeks on tue, thu, every month on the 1st, weekday, daily. It's first due on --due, or the next day it falls on

      --strict
          Refuse (exit 2) text the parser warns about, such as an unknown #List, instead of adding the task with a note

      --my-day
          Put it in today's My Day, as +myday or * in the text does. With no due date, it's due today too

      --assignee <PERSON>
          Who it waits on: a name or an email, only ms-todo sees it and nobody is told. The task is made "waiting on others" too, which the To Do app shows

      --keep-status
          With --assignee: don't make it "waiting on others"

      --defer <WHEN>
          Hide it until this day, over any ^date in the text, in the forms --due takes: fri, next week, in 3 days, 2026-10-02. Only ms-todo hides it; the due date stays the deadline

      --someday
          Park it as Someday, as +someday in the text does: hidden until you take it out with `tasks edit --no-someday`

      --nag <EVERY>
          Once its reminder is due, notify me on this machine every so often until it's done, as +nag15m in the text does: 15m, 1h, 1h30m (5m to 24h). Needs a reminder

      --dry-run
          Show what would be sent without changing anything

      --idempotency-key <KEY>
          Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
