tests/snapshots/cli_help__cli_help_tasks_delete.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Delete tasks. Asks first in a terminal; anywhere else it needs --yes

Usage: ms-todo tasks delete [OPTIONS] <TASK>...

Arguments:
  <TASK>...  Task IDs from `tasks list`, or exact titles when --list is given. `-` reads IDs from stdin, one per line

Options:
      --format <FORMAT>        Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --list <NAME|ID>         Look for the tasks in this list (exact name or ID), which also lets TASK be an exact title
      --dry-run                Show what would change without changing anything
      --instance <NAME>        Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --fresh                  Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --idempotency-key <KEY>  Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2
      --quiet                  Print nothing on stderr but errors: no notes and no progress
      --yes                    Delete without asking
      --no-color               No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>    Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                   Print help
  -V, --version                Print version
