tests/snapshots/cli_help__cli_help_tasks_edit.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Change a task's title, dates, importance, reminder, notes, recurrence, categories, assignee, defer date or Someday; or all but the title and notes of several at once

Usage: ms-todo tasks edit [OPTIONS] [TASK]...

Arguments:
  [TASK]...  The task's ID from `tasks list`, or its exact title when --list is given. Several change together; `-` reads IDs from stdin, one per line

Options:
      --format <FORMAT>        Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --overdue                Every open task due before today
      --due-before <WHEN>      Every open task due before this day: fri, next mon, +1w, 2026-10-02
      --instance <NAME>        Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --folder <FOLDER>        With --overdue or --due-before: only the lists in this folder
      --fresh                  Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --list <NAME|ID>         Look for the task in this list (exact name or ID), which also lets TASK be an exact title
      --quiet                  Print nothing on stderr but errors: no notes and no progress
      --no-color               No colour or bold in tables (also NO_COLOR)
      --title <TITLE>          New title, taken literally
      --due <WHEN>             New due date, in the forms --due takes on `tasks add`; empty or `-` removes it, as --clear-due does
      --clear-due              Remove the due date
      --importance <LEVEL>     New importance: 1 or p1 (high), 2, 3, p2 or p3 (normal), 4 or p4 (low), or high, normal or low
      --reminder <WHEN>        Remind me at this local time, in the forms --reminder takes on `tasks add`; empty or `-` turns it off
      --clear-reminder         Turn the reminder off
      --body <TEXT>            New notes, as plain text. They replace the old ones
      --body-file <FILE>       New notes from a file, as plain text; `-` reads stdin
      --start <WHEN>           New start date, in the forms --due takes; empty or `-` removes it. The task's due date is sent with it, or with none, the start date becomes the due date too, as Microsoft To Do makes it
      --clear-start            Remove the start date
      --recur <EVERY>          Make it repeat: every mon, every 2 weeks on tue, thu, every month on the 1st, weekday, daily. The due date becomes its first time: --due, or the next day it falls on from today
      --clear-recur            Stop it repeating. Its due date stays
      --category <NAME>        Its categories, replacing those it has; several give several
      --clear-categories       Remove every category
      --assignee <PERSON>      Who it waits on: a name or an email, only ms-todo sees it and nobody is told. An open task becomes "waiting on others" too, which the To Do app shows
      --clear-assignee         Remove the assignee. A task ms-todo made "waiting on others" is "not started" again, unless its status has changed since
      --keep-status            With --assignee or --clear-assignee: leave the status as it is
      --defer <WHEN>           Hide it until this day, in the forms --due takes; empty or `-` shows it again, as --clear-defer does. The due date isn't touched
      --clear-defer            Show it again now: remove its defer date
      --someday                Park it as Someday: hidden until --no-someday
      --no-someday             Take it out of Someday
      --dry-run                Show what would change without changing anything
      --yes                    Change several tasks without asking. Off a terminal, changing more than one needs it
      --idempotency-key <KEY>  Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2
  -h, --help                   Print help
  -V, --version                Print version
