tests/snapshots/cli_help__cli_help_tasks_list.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Every task in a list, completed ones included; or with a filter and no --list, the tasks in every list that match it

Usage: ms-todo tasks list [OPTIONS]

Options:
      --format <FORMAT>
          Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped]

          [possible values: table, json, jsonl, ids, csv]

      --list <NAME|ID>
          The list's exact name or its ID [default: the "Tasks" list, or with --status, --due, --importance, --category, --deferred only or --nagging, every list]

      --instance <NAME>
          Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy

      --my-day
          Today's My Day instead of a list, as `myday list` gives it

      --fresh
          Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)

      --search <QUERY>
          Only tasks whose title or notes match, best match first; the syntax is `search`'s

      --assignee <PERSON>
          Only tasks assigned to this person (a case-insensitive exact match), or to anyone with `*`. Without --list, the open tasks of every list, grouped by person

      --quiet
          Print nothing on stderr but errors: no notes and no progress

      --no-color
          No colour or bold in tables (also NO_COLOR)

      --status <STATUS>
          Only tasks with this status

          Possible values:
          - open:        Not completed
          - completed
          - all:         Open and completed
          - not-started
          - in-progress
          - waiting:     Waiting on others
          - deferred

      --completed
          Only completed tasks, as --status completed

      --context <NAME|none>
          Read this command in this context (from config.toml) rather than the active one; `none` for every list

      --due <WHEN>
          Only tasks due: today, overdue (open and due before today), none, any, "before fri", "after 12 oct", or on a day (tomorrow, 2026-10-02)

      --importance <LEVEL>
          Only tasks of this importance: high, normal or low (or 1–4, p1–p4)

      --category <NAME>
          Only tasks with this category (ignoring case)

      --nagging
          Only open tasks set to nag (`tasks nag`); each has `nag`, its interval in minutes, in its extension

      --sort <SORT>
          Order by: due (soonest first, none last), importance (high first), created or modified (newest first), title [default: the list's order; every list's is by due date]

          [possible values: due, importance, created, modified, title]

      --limit <N>
          At most this many, after sorting

      --deferred <WHICH>
          Tasks deferred to a later day, or parked as Someday: hide (the default; the table says how many), include, or only them (every list without --list, by the day they come back, then Someday). A search always includes them

          [possible values: hide, include, only]

  -h, --help
          Print help (see a summary with '-h')

  -V, --version
          Print version
