tests/snapshots/cli_help__cli_help_tasks_move.snap
---
source: tests/cli_help.rs
expression: help_output(args)
---
Move tasks to another list, keeping everything they hold: steps, link, attachments and ms-todo's own fields. Each is copied, the copy checked, and only then the original deleted; `undo` moves it back

Usage: ms-todo tasks move [OPTIONS] --to <NAME|ID> <TASK>...

Arguments:
  <TASK>...  Task IDs from `tasks list`, or exact titles when --list is given. Several move together; `-` reads IDs from stdin, one per line

Options:
      --format <FORMAT>        Output format: jsonl is one object per line, ids one ID per line, csv has a header row [default: table in a terminal, json when piped] [possible values: table, json, jsonl, ids, csv]
      --to <NAME|ID>           The list to move them to (exact name or ID)
      --instance <NAME>        Use a separate copy of ms-todo's data (also MS_TODO_INSTANCE). Builds run from Cargo's target/ directory default to "dev"; "default" is the installed copy
      --list <NAME|ID>         Look for the tasks in this list (exact name or ID), which also lets TASK be an exact title
      --dry-run                Show which tasks would move without changing anything
      --fresh                  Before reading, sync and wait, so the answer is as fresh as Microsoft To Do's (a read is otherwise answered from the cache)
      --quiet                  Print nothing on stderr but errors: no notes and no progress
      --yes                    Move several tasks without asking. Off a terminal, moving more than one needs it
      --idempotency-key <KEY>  Run this change at most once: repeating the command with the same key returns the first result for 24 hours, and the same key with a different change exits 2
      --no-color               No colour or bold in tables (also NO_COLOR)
      --context <NAME|none>    Read this command in this context (from config.toml) rather than the active one; `none` for every list
  -h, --help                   Print help
  -V, --version                Print version
